--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,7 @@ dependencies = [
     "selenium>=4.40.0",
     "speechrecognition>=3.14.5",
     "undetected-chromedriver>=3.5.5",
+    "langchain-community>=0.4.1",
+    "boto3>=1.42.36",
+    "pypdf>=6.6.2",
 ]
