--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,8 @@ dependencies = [
     "langchain-community>=0.4.1",
     "boto3>=1.42.36",
     "pypdf>=6.6.2",
+    "langsmith>=0.6.4",
+    "langchain-text-splitters>=1.1.0",
+    "langchian>=0.2.5",
+    "langchain>=1.2.7",
 ]
